feat: delete offer network company
